--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,9 @@
     </div>
 
 
-
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="'js/main.js"></script>
+
   </body>
 </html>
 
