--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="mocha">
       <div class="mocha-fixture hidden">
-        <h1>Hello World</h1>
+        <table><thead></thead><tbody></tbody></table>
       </div>
     </div>
 
@@ -27,6 +27,7 @@
     </script>
 
     <!-- include source files here... -->
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../public/js/main.js"></script>
     <!-- include spec files here... -->
     <script src="spec/main.test.js"></script>
