Adding async and additional test modules (with their functions).

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     </div>
 
 
+    <script src="../bower_components/async/lib/ascync.js"></script>
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="'js/main.js"></script>
 
